--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div id="root">
 
     </div>
-    <script src="https://cdn.bootcss.com/react/16.2.0/umd/react.development.js"></script>
-    <script src="https://cdn.bootcss.com/react-dom/16.2.0/umd/react-dom.development.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/react/16.2.0/umd/react.development.js"></script>
+    <script src="https://cdn.bootcss.com/react-dom/16.2.0/umd/react-dom.development.js"></script> -->
 </body>
 </html>
